--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
 
       <div class="well">
-          Resut:
+          Result:
           <span id="result"></span>
       </div>
     </div>
